fix overflow issue

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ body {
 	height: 100vh;
 	background-color: var(--bg-clr-primary);
 	font-family: var(--ff);
-	overflow: hidden;
 }
 .container {
 	position: relative;
